@@ -352,6 +352,7 @@ dox.generalPublisherProperties=General publisher properties
 dox.spinwavePP=Spinwave point properties
 dox.eventHandlers=Event handlers
 dox.emailSettings=Email settings
+dox.emailTemplates=Email templates
 dox.httpSettings=HTTP settings
 dox.nmeaListenerDS=NMEA listener data source
 dox.welcomeToMango=Welcome to Mango Automation
