@@ -1,0 +1,40 @@
+<!--
+    Copyright (C) 2018 Infinite Automation Systems Inc. All rights reserved.
+    @author Terry Packer
+-->
+<p>
+  <h2>Overview</h2>
+  Email templates are generated using FreeMarker <a href="https://freemarker.apache.org" target="_blank">FreeMarker</a>.  Mango can generate HTML or Plain text 
+  emails, this is configured in the Email system settings area.
+  
+  Using the FreeMarker language one can customize the templates located at MA_HOME/ftl, if you choose to customize an existing template be sure 
+  to place it into the overrides/ftl/... directory in the same folder structure as the original.
+  
+  Further to the standard FreeMarker language there are 2 additional directives specific to Mango.
+  <ul>
+    <li><code><@subject>email subject content< /@subject></code> - Defines the subject</li>
+    <li><code><@fmt message=translatable message OR key=i18n key/></code> - allows the use of Mango's i18n translations</li>
+  </ul>
+  
+  <h2>Model</h2>
+  The model is a map of data sent into the template that allows accessing Mango specific information during template generation.  To use something from 
+  the model, use ${modelKey} and/or ${modelKey.property}.  For example every Email generated by and event handler will have an 'evt' property.  For example 
+  you can use ${evt.alarmLevel} to get the integer value of the alarm level.  For example to Print <i>Urgent</i> one could use the following ftl code:
+  
+  <p>
+  <code>
+  <#if evt.alarmLevel==0>
+  	<@fmt key="common.alarmLevel.urgent"/>
+  < /#if>
+  </code>
+  </p>
+  Another example of adding data point tags:
+  <p>
+  <code>
+    <#list point.tags as tag,value>
+      ${tag} - ${value}
+    < /#list>
+  </code>
+  </p>
+  Describing how to use all of the data within the model is not within the scope of this document, for examples please see the existing templates in the ftl folder.
+</p>
